--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,16 +12,18 @@
     <link rel="stylesheet" href="../css/font-awesome.css">
     <link rel="stylesheet" href="../css/docs.css">
     <link rel="stylesheet" href="../css/bootstrap-social.css">
+    <link rel="icon" href="../assest/images/fav-icon.png" type="image/png" />
 
     <!-- CSS Propio -->
     <link rel="stylesheet" href="../css/cusstom.css">
 </head>
+
 <body>
     <!-- Barra de Navegacion, en esta pagina no apareceria -->
     <div class="container-fluid w-100 container-style">
         <div class="row align-items-center headline">
             <div class="col col-md-2 w-25">
-                <img class="img-fluid"src="../assest/images/logo.png" alt="Logo Sr Cobranza">
+                <img class="img-fluid" src="../assest/images/logo.png" alt="Logo Sr Cobranza">
             </div>
             <div class="col col-md-8 w-75">
                 <p class="text-center title">Sr Cobranza</p>
@@ -105,11 +108,13 @@
                 <i class="fa fa-facebook"></i>
             </a>
             <!-- Instragam -->
-            <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/daniel_cazabat/" target="_blank">
+            <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/daniel_cazabat/"
+                target="_blank">
                 <i class="fa fa-instagram"></i>
             </a>
             <!-- LinkedIn -->
-            <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/daniel-cazabat-92223114b/" target="_blank">
+            <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/daniel-cazabat-92223114b/"
+                target="_blank">
                 <i class="fa fa-linkedin"></i>
             </a>
             <!-- Gmail -->
@@ -126,7 +131,7 @@
                 Daniel Cazabat - 2020
             </i>
         </div>
-  </div>
+    </div>
 
     <!-- Modal HTML Form de Login -->
     <div id="ModalLoginForm" class="modal fade">
@@ -164,12 +169,15 @@
     </div><!-- /.modal -->
 
     <!-- JS que corresponde a Boostrap -->
-    <script src="../js/jquery-3.5.1.slim.min.js"></script>
-    <script src="../js/popper.min.js"></script>
-    <script src="../js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/jquery-3.5.1.slim.min.js"></script>
+    <script type="text/javascript" src="../js/popper.min.js"></script>
+    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/bootstrap.bundle.min.js"></script>
+
 
     <!-- JS para Icons Social -->
-    <script src="../js/jquery.js"></script>
-    <script src="../js/docs.js"></script>
+    <script type="text/javascript" src="../js/jquery.js"></script>
+    <script type="text/javascript" src="../js/docs.js"></script>
 </body>
+
 </html>
